--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,13 @@
         "php": "^7.1.3",
         "symfony/http-foundation": "^4.3",
         "symfony/routing": "^4.3",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "symfony/dependency-injection": "^4.3",
+        "symfony/config": "^4.3",
+        "symfony/expression-language": "^4.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "psr-4": {
