--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/expression-language": "^4.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5"
+        "phpunit/phpunit": "^7.5",
+        "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
         "psr-4": {
