--- a/config/parameters/db.yaml
+++ b/config/parameters/db.yaml
@@ -1,8 +1,5 @@
 parameters:
     pdo:
-        driver: 'pgsql'
-        host: 172.17.0.2
-        port: 5432
-        database: 'rest_api'
+        dsn: 'pgsql:host=172.17.0.2;port=5432;dbname=rest_api'
         user: postgres
         password: postgres
