--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,3 +7,8 @@ create_items:
     path: /api/create-items
     methods: POST
     controller: App\Controller\ItemController::createItems
+
+get_items:
+    path: /api/get-items
+    methods: GET
+    controller: App\Controller\ItemController::getItems
