1. Refactoring of DB layer, registering in DI. Editing tests. 2. Add new route for create order, skeleton of new services

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,3 +12,8 @@ get_items:
     path: /api/get-items
     methods: GET
     controller: App\Controller\ItemController::getItems
+
+create_order:
+    path: /api/create-order
+    methods: POST
+    controller: App\Controller\OrderController::createOrder
