Pay order service. Change routes for REST API.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,3 +31,5 @@ services:
     App\Service\ItemGeneratorServiceInterface: '@App\Service\ItemGeneratorService'
 
     App\Service\CreateOrderServiceInterface: '@App\Service\CreateOrderService'
+
+    App\Service\OrderPayServiceInterface: '@App\Service\OrderPayService'
