--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,16 +4,22 @@ home_page:
     controller: App\Controller\HomeController::greetAPIUsers
 
 create_items:
-    path: /api/create-items
+    path: /api/items/create
     methods: POST
     controller: App\Controller\ItemController::createItems
 
 get_items:
-    path: /api/get-items
+    path: /api/items
     methods: GET
     controller: App\Controller\ItemController::getItems
 
 create_order:
-    path: /api/create-order
+    path: /api/order/create
     methods: POST
     controller: App\Controller\OrderController::createOrder
+
+pay_order:
+    path: /api/order/pay
+    methods: POST
+    controller: App\Controller\OrderController::payOrder
+
