1. Small improving validation of order pay input data. 2. Implementing pay order, logic with http request 3. Fixing core bug of updating entity 4. Unit tests for controller pay action and order pay service

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,9 @@
 imports:
     - { resource: parameters/db.yaml }
 
+parameters:
+    order.pay_check_url: 'http://ya.ru'
+
 services:
     _defaults:
         autowire: true
@@ -32,4 +35,11 @@ services:
 
     App\Service\CreateOrderServiceInterface: '@App\Service\CreateOrderService'
 
+    App\Service\OrderPayService:
+        arguments:
+            $payCheckURL: '%order.pay_check_url%'
+
     App\Service\OrderPayServiceInterface: '@App\Service\OrderPayService'
+
+    GuzzleHttp\ClientInterface:
+        class: GuzzleHttp\Client
