--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "symfony/yaml": "^4.3",
         "symfony/dependency-injection": "^4.3",
         "symfony/config": "^4.3",
-        "symfony/expression-language": "^4.3"
+        "symfony/expression-language": "^4.3",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
