--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,19 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.1.3",
-        "symfony/http-foundation": "^4.3",
-        "symfony/routing": "^4.3",
-        "symfony/yaml": "^4.3",
-        "symfony/dependency-injection": "^4.3",
-        "symfony/config": "^4.3",
-        "symfony/expression-language": "^4.3",
-        "guzzlehttp/guzzle": "^6.3"
+        "php": "^7.3",
+        "ext-json": "*",
+        "ext-pdo": "*",
+        "symfony/http-foundation": "^4.4",
+        "symfony/routing": "^4.4",
+        "symfony/yaml": "^4.4",
+        "symfony/dependency-injection": "^4.4",
+        "symfony/config": "^4.4",
+        "symfony/expression-language": "^4.4",
+        "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "*"
     },
     "autoload": {
